<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  Colors for expanadable list  -->
    <drawable name="white">#ffffff</drawable>
    <drawable name="blue">#2554C7</drawable>
    <drawable name="green">#347C2C</drawable>
    <drawable name="orange">#ff9900</drawable>
    <drawable name="pink">#FF00FF</drawable>
    <drawable name="violet">#a020f0</drawable>
    <drawable name="gray">#778899</drawable>
    <drawable name="red">#C11B17</drawable>

    <string name="app_name">Who\'s On First?</string>
    
    
    <string name="title_section4">Phfflph</string>
    <string name="title_section3">BitBangerFF</string>
    <string name="title_section2">Grep</string>
    <string name="title_section1">Team Best Team Ever</string>
    <string name="hello_world">Hello world!</string>    
    <string name="menu_settings">Settings</string>
    <string name="menu_random">Random</string>
    <string name="menu_add_group">Add Group</string>
    <string name="menu_add_list">Add List</string>
    <string name="menu_add_item">Add Item</string>
    <string name="settings">Settings:</string>
    <string name="settingsImg">Settings Image</string>
    <string name="groupSelect">Group Selection:</string>
    <string name="listSelect">List Selection:</string>
    <string name="newitem">Insert new item name:</string>
    <string name="newlist">Insert new list name:</string>
    <string name="newgroup">Insert new group name:</string>
    <string name="editgroup">Edit Group Name:</string>
    <string name="editlist">Edit List Name:</string>
    <string name="edititem">Edit Item Name:</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="default_new_item">Enter Item Name</string>
    <string name="default_new_list">Enter List Name</string>
    <string name="default_new_group">Enter Group Name</string>
    <string name="default_edit_group">Edit Group Name</string>
    <string name="default_edit_list">Edit List Name</string>
    <string name="default_edit_item">Edit Item Name</string>
        
    <string name="shook">Device has been shaken</string>
    
    <string name="test_button">Test Button</string>
    
    <string name="exclusitivity">Exclusitivity</string>
    <string name="shaker">Shake Randomization</string>
    <string name="verbalization">Verbalization</string>
    
    <string name="toggleT">Exclusion Toggle</string>
    <string name="toggleV">Verbal Toggle</string>
    <string name="toggleS">Shake Toggle</string>
</resources>