<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/behindMenuScroll"
    xmlns:grid="http://schemas.android.com/apk/res-auto" xmlns:app="http://schemas.android.com/apk/res/com.nickotter.randomname">

        <android.support.v7.widget.GridLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alignmentMode="alignBounds"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:useDefaultMargins="true" >

            <ToggleButton
                android:id="@+id/toggleExclusion"
                style="@style/behindMenuItemLabel"
                app:layout_column="0"
                app:layout_row="0"
                android:text="@string/toggleT"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView1"
                style="@style/behindMenuItemLabel"
                app:layout_column="3"
                app:layout_columnSpan="2"
                app:layout_gravity="left"
                app:layout_row="0"
                android:text="@string/exclusitivity"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14sp" />

            <ToggleButton
                android:id="@+id/toggleVerbalize"
                style="@style/behindMenuItemLabel"
                app:layout_column="0"
                app:layout_row="1"
                android:text="@string/toggleV"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView3"
                style="@style/behindMenuItemLabel"
                app:layout_column="3"
                app:layout_columnSpan="2"
                app:layout_gravity="left"
                app:layout_row="1"
                android:text="@string/shaker"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14sp" />

            <ToggleButton
                android:id="@+id/toggleShaker"
                style="@style/behindMenuItemLabel"
                app:layout_column="0"
                app:layout_row="2"
                android:text="@string/toggleS"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView2"
                style="@style/behindMenuItemLabel"
                app:layout_column="3"
                app:layout_row="2"
                android:text="@string/verbalization"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14sp" />

            <android.support.v7.widget.Space
                android:layout_width="10dp"
                android:layout_height="1dp"
                app:layout_column="1"
                app:layout_row="0" />

            <android.support.v7.widget.Space
                android:layout_height="15dp"
                app:layout_column="2"
                app:layout_row="0" />

            <android.support.v7.widget.Space
                android:layout_width="58dp"
                android:layout_height="15dp"
                app:layout_column="4" />
        </android.support.v7.widget.GridLayout>
   
</ScrollView>