<!--
  <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res/com.nickotter.randomname"
    style="@style/behindMenuScroll" >
-->


    <LinearLayout
        android:id="@+id/draw_lin_lay"
        xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:grid="http://schemas.android.com/apk/res-auto"
    	xmlns:app="http://schemas.android.com/apk/res/com.nickotter.randomname"
    	style="@style/behindMenuScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
         >

        <android.support.v7.widget.GridLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignBounds"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:orientation="vertical"
            android:useDefaultMargins="true"
            app:columnCount="1" >

            <TextView
                android:id="@+id/SettingsTxt"
                style="@style/behindMenuItemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_column="0"
                app:layout_row="0"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="@string/settings"
                android:textSize="22sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="3dp"
                app:layout_column="0"
                app:layout_columnSpan="2"
                app:layout_row="1"
                android:background="#ffffff" />

            <ToggleButton
                android:id="@+id/toggleExclusion"
                style="@style/behindMenuItemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="0"
                app:layout_row="2"
                android:text="@string/toggleT"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/exclusionTxt"
                style="@style/behindMenuItemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                app:layout_column="0"
                app:layout_columnSpan="2"
                app:layout_gravity="left"
                app:layout_row="2"
                android:text="@string/exclusitivity"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14sp" />

            <ToggleButton
                android:id="@+id/toggleVerbalize"
                style="@style/behindMenuItemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="0"
                app:layout_row="3"
                android:text="@string/toggleV"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/verbalText"
                style="@style/behindMenuItemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                app:layout_column="0"
                app:layout_columnSpan="2"
                app:layout_gravity="left"
                app:layout_row="3"
                android:text="@string/shaker"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14sp" />

            <ToggleButton
                android:id="@+id/toggleShaker"
                style="@style/behindMenuItemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="0"
                app:layout_row="4"
                android:text="@string/toggleS"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/shakerText"
                style="@style/behindMenuItemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                app:layout_column="0"
                app:layout_gravity="left"
                app:layout_row="4"
                android:text="@string/verbalization"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/GroupTxt"
                style="@style/behindMenuItemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_column="0"
                app:layout_row="5"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="@string/groupSelect"
                android:textSize="22sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="3dp"
                app:layout_column="0"
                app:layout_row="6"
                android:background="#ffffff" />

            <ImageView
                android:id="@+id/settingsGearImg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="100dp"
                app:layout_column="0"
                app:layout_gravity="left|top"
                app:layout_row="0"
                android:clickable="false"
                android:contentDescription="@string/settingsImg"
                android:longClickable="false"
                android:src="@drawable/abs__ic_search_api_holo_light" />

        </android.support.v7.widget.GridLayout>

        <Button
            android:id="@+id/add_group_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:onClick="navAddGroup"
            android:text="@string/menu_add_group" />

        <ListView
            android:id="@+id/groupListView"
            android:layout_width="264dp"
            android:layout_height="wrap_content" >
        </ListView>

    </LinearLayout>

<!--</ScrollView>-->